--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-xl fixed-top ">
+    <nav class="navbar navbar-expand-lg fixed-top ">
       <div class="container-fluid">
         <a class="logo" href="#"> 
           <img src="/imagenes/Logotipo.png" alt="" class="logotipo">
@@ -121,10 +121,10 @@
 </div>
 <div class="card-body">
     <div class="row">
-        <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+        <div class="col-12 col-lg-6">
             <img src="/imagenes/nosotros.svg" class="nosotros" alt="">
         </div>
-        <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+        <div class="col-12 col-lg-6">
               </br>
           <p class="titulo1">Mediante fondeo, CREDICO tiene la capacidad de ejecutar transacciones de cualquier monto.</p>
               </br>
@@ -147,10 +147,10 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                <div class="col-12 col-lg-6">
                     <img src="/imagenes/servicios.svg" class="servicio p-3" alt="">
                 </div>
-        <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+        <div class="col-12 col-lg-6">
         </br>
         <p class="titulo1-1">INYECCION DE CAPITAL</p>
         <p class="titulo1">Inyectamos capital privado a empresas y proyectos con alto potencial de crecimiento en cualquier rama.</p>
@@ -174,10 +174,10 @@
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                <div class="col-12 col-lg-6">
                     <img src="/imagenes/prestamo.svg" class="nosotros p-3" alt="">
                 </div>
-        <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+        <div class="col-12 col-lg-6">
         </br>
         <p class="titulo1">Nadie entiende mejor la necesidad de un préstamo para tu empresa que CREDICO de una manera sencilla y sin complicaciones, ofrecemos soluciones efectivas a tu problemática</p>
     </BR>
@@ -192,37 +192,38 @@
 
 
         <!-- P R E S T A C I O N E S  -->
-<section class="pronafim-area" id="pronafim">
+<section class="pronafim-area mb-5" id="pronafim">
 <div class="container">
   <div class="row">
-  <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+  <div class="centrar col-12 col-lg-6">
     <img src="/imagenes/apoyo.svg" alt="" class="nube">
   </div>
-  <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
-  </br></br></br></br></br></br></br></br></br>
-    <p class="prestamoTxt">impulsado por</p>
+  <div class="centrar col-12 col-lg-6 row mt-5 mt-lg-0">
+    <div>
+      <p class="prestamoTxt">impulsado por</p>
     <p class="prestamoTxt2">PRONAFIM</p>
     <p class="prestamoTxt3">Programa Nacional de Financiamiento</p>
     <p class="prestamoTxt4">Al microempresario y a la mujer</p>
+    </div>
   </div>
 </div>
 </div>
 </section>
 
 <!--  A P O Y O  -->
-<section class="apoyo-area" id="apoyo">
+<section class="apoyo-area mb-5" id="apoyo">
 <div class="container">
   <div class="row">
-    <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
-      <p class="titulo10"></BR></BR></BR>
-        -Apoyo a madres solteras/mujer emprendedora</BR></BR>
-        -Becas estudiantes </BR></BR>
-        -Apoyo a adultos mayores</BR></BR>
-        -Apoyo legal + psicologico </BR></BR>
+    <div class="centrar col-12 col-lg-6">
+      <p class="fs-4 fs-lg-3 text-dark mx-auto">
+        -Apoyo a madres solteras/mujer emprendedora</BR>
+        -Becas estudiantes </BR>
+        -Apoyo a adultos mayores</BR>
+        -Apoyo legal + psicologico </BR>
         -Acceso al fondo de credito 
       </p>
     </div>
-  <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+  <div class="col-12 col-lg-6">
 <img src="/imagenes/casa.svg" alt="" class="casa" >
   </div>
   </div>
@@ -233,16 +234,17 @@
         <section class="ubicacion-area" id="ubicacion">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                <div class="col-12 col-lg-6">
                     <img src="/imagenes/localizacion2.svg" alt="" class="ubicacion">
                 </div>
-                <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                    <p class="titulo5">
-                    </Br></Br></Br> </Br> </Br> </Br> </Br> 
-                        Estamos muy cerca de ti </p>
-                        <p class="titulo5-1">
-                        Montecito 38 Colonia Napoles Benito Juarez CD Mexico
-                        </p>
+                <div class="centrar col-12 col-lg-6 row">
+                   <div> 
+                     <p class="titulo5">
+                    Estamos muy cerca de ti </p>
+                    <p class="titulo5-1">
+                      Montecito 38 Colonia Napoles Benito Juarez CD Mexico
+                      </p>
+                    </div>
                         </div>
 
                 </div>
@@ -367,7 +369,8 @@
               <img src="/imagenes/redes.svg" alt="" class="redes">
             </div>
               <div class="col">
-                <pr class="txtFor1"></br></br></br>
+                <div class="my-auto">
+                  <pr class="txtFor1"></br></br></br>
                     CONTACTOS </br>
                 </pr>
                 <pr class="txtFor2">
@@ -387,6 +390,7 @@
     <pr class="txtFor2">
     <img src="/imagenes/faceLogo.png" alt="" class="face"> CREDICO
   </pr> 
+                </div>
             </div>
             </div>
         </div>
