--- a/index.html
+++ b/index.html
@@ -192,11 +192,7 @@
 
 
         <!-- P R E S T A C I O N E S  -->
-<<<<<<< HEAD
-<section class="pronafim-area mt-" id="pronafim">
-=======
 <section class="pronafim-area mb-5" id="pronafim">
->>>>>>> d6c373b21706eb96242eb12a541aed9810f123ca
 <div class="container">
   <div class="row">
   <div class="centrar col-12 col-lg-6">
@@ -235,7 +231,7 @@
 </section>
 
 <!--  U B I C A C I O N  -->
-        <section class="ubicacion-area" id="ubicacion">
+        <section class="ubicacion-area mb-5" id="ubicacion">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
@@ -258,10 +254,10 @@
     <section class="formulario-area colFor" id="formulario">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col centrar">
                     <img src="/imagenes/chat.svg" alt="" class="ubicacion2">
                 </div>
-                <div class="col">
+                <div class="col centrar">
                 </Br></Br></Br>
                 <!-- FORMULARIO -->
                 <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
