--- a/index.html
+++ b/index.html
@@ -177,13 +177,14 @@
                 <div class="col-12 col-lg-6">
                     <img src="/imagenes/prestamo.svg" class="nosotros p-3" alt="">
                 </div>
-        <div class="col-12 col-lg-6">
-        </br>
-        <p class="titulo1">Nadie entiende mejor la necesidad de un préstamo para tu empresa que CREDICO de una manera sencilla y sin complicaciones, ofrecemos soluciones efectivas a tu problemática</p>
+        <div class="col-12 col-lg-6 centrar">
+        <div class="row">
+          <p class="titulo1">Nadie entiende mejor la necesidad de un préstamo para tu empresa que CREDICO de una manera sencilla y sin complicaciones, ofrecemos soluciones efectivas a tu problemática</p>
     </BR>
         <p class="titulo1">Préstamos, financiamiento y reestructuración de deuda para tu empresa o para cubrir compromisos personales</p>
     </BR>
         <p class="titulo1">Te ofrecemos asesoría en evaluación y planeación de tu deuda.</p>
+        </div>
     </div>
             </div>
         </div>
@@ -257,13 +258,12 @@
                 <div class="col centrar">
                     <img src="/imagenes/chat.svg" alt="" class="ubicacion2">
                 </div>
-                <div class="col centrar">
-                </Br></Br></Br>
+                <div class="col centrarVertical">
                 <!-- FORMULARIO -->
-                <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+                <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" class="mx-auto w-75">
                  <!-- Nombre -->
                   <div class="form-group">
-                    <label for="name">Nombre del cliente:</label>
+                    <label  for="name">Nombre del cliente:</label>
                     <input type="text" class="form-control" id="name" name="name" required>
                   </div>
                   <!-- correo -->
@@ -364,38 +364,70 @@
 <!-- contactos -->
 <section class="contacto-area" id="contacto">
         <div class="container">
-            <div class="row align-items-start">
+            <div class="row">
             <div class="col">
               <img src="/imagenes/redes.svg" alt="" class="redes">
             </div>
               <div class="col">
-                <div class="my-auto">
-                  <pr class="txtFor1"></br></br></br>
-                    CONTACTOS </br>
-                </pr>
-                <pr class="txtFor2">
-                <img src="/imagenes/whatsapp.png" alt="" class="face"> 5574906483 </br>
-                <img src="/imagenes/whatsapp.png" alt="" class="face"> 5513762413
-             </pr></br></br></br>
-             <pr class="txtFor1">
-              HORARIOS </br>
-          </pr>
-          <pr class="txtFor2">
-           Lunes a Viernes</br>
-           10 AM - 6 PM 
-       </pr> </br></br></br>
-       <pr class="txtFor1">
-        REDES SOCIALES </br>
-    </pr>
-    <pr class="txtFor2">
-    <img src="/imagenes/faceLogo.png" alt="" class="face"> CREDICO
-  </pr> 
+                <div class=>
+                  <div class="mx-auto">
+                    <pr class="txtFor1"></br></br></br>
+                      CONTACTOS </br>
+                  </pr>
+                  <pr class="txtFor2">
+                  <img src="/imagenes/whatsapp.png" alt="" class="face"> 5574906483 </br>
+                  <img src="/imagenes/whatsapp.png" alt="" class="face"> 5513762413
+               </pr></br></br></br>
+               <pr class="txtFor1">
+                HORARIOS </br>
+            </pr>
+            <pr class="txtFor2">
+             Lunes a Viernes</br>
+             10 AM - 6 PM 
+         </pr> </br></br></br>
+         <pr class="txtFor1">
+          REDES SOCIALES </br>
+      </pr>
+      <pr class="txtFor2">
+      <img src="/imagenes/faceLogo.png" alt="" class="face"> CREDICO
+    </pr> 
+                  </div>
                 </div>
             </div>
             </div>
         </div>
     </br>
     </section>
+
+    <div class="container">
+<div class="row">
+  <div class="col-6 centrar">
+    <img src="/imagenes/redes.svg" alt="" class="redes">
+  </div>
+  <div class="col-6">
+<div class="row centrar">
+  <div class="txtFor1 text-center">
+    contactos
+  </div>
+  <pr class="txtFor2 centrar">
+    <img src="/imagenes/whatsapp.png" alt="" class="face"> 5574906483 </br>
+    <img src="/imagenes/whatsapp.png" alt="" class="face"> 5513762413
+ </pr></br></br></br>
+ <pr class="txtFor1">
+  HORARIOS </br>
+</pr>
+<pr class="txtFor2">
+Lunes a Viernes</br>
+10 AM - 6 PM 
+</pr> </br></br></br>
+<pr class="txtFor1">
+REDES SOCIALES </br>
+</pr>
+</div>
+  </div>
+
+</div>
+    </div>
 
     <!-- <img src="/imagenes/rosa5.jpeg" alt="" class="rosa"> -->
 
