--- a/index.html
+++ b/index.html
@@ -197,17 +197,22 @@
 <section class="section" id="pronafim"></section>
 <section class="pronafim-area" >
 <div class="container">
-  <div class="card p-4">
-    <div class="row">
-      <div class="centrar col-12 col-lg-6">
-        <img src="/imagenes/apoyo.svg" alt="" class="nube">
-      </div>
-      <div class="centrar col-12 col-lg-6 row mt-5 mt-lg-0">
-        <div>
-          <p class="prestamoTxt">impulsado por</p>
-        <p class="prestamoTxt2">PRONAFIM</p>
-        <p class="prestamoTxt3">Programa Nacional de Financiamiento</p>
-        <p class="prestamoTxt4">Al microempresario y a la mujer</p>
+  <div class="card">
+    <div class="card-header">
+      <h4 class="text-center">PRONAFIM</h4>
+    </div>
+    <div class="card-body p-4">
+      <div class="row">
+        <div class="centrar col-12 col-lg-6">
+          <img src="/imagenes/apoyo.svg" alt="" class="nube">
+        </div>
+        <div class="centrar col-12 col-lg-6 row mt-5 mt-lg-0">
+          <div>
+            <p class="prestamoTxt">impulsado por</p>
+          <p class="prestamoTxt2">PRONAFIM</p>
+          <p class="prestamoTxt3">Programa Nacional de Financiamiento</p>
+          <p class="prestamoTxt4">Al microempresario y a la mujer</p>
+          </div>
         </div>
       </div>
     </div>
@@ -217,22 +222,25 @@
 
 <!--  A P O Y O  -->
 <section class="section" id="apoyo"></section>
-<section class="apoyo-area " id="apoyo">
+<section class="apoyo-area">
 <div class="container">
-  <div class="card p-4">
-    <div class="row">
-      <div class="centrar col-12 col-lg-6">
-        <p class="fs-4 fs-lg-3 text-dark mx-auto">
-          -Apoyo a madres solteras/mujer emprendedora</BR>
-          -Becas estudiantes </BR>
-          -Apoyo a adultos mayores</BR>
-          -Apoyo legal + psicologico </BR>
-          -Acceso al fondo de credito 
-        </p>
-      </div>
-    <div class="col-12 col-lg-6">
-  <img src="/imagenes/casa.svg" alt="" class="casa" >
+  <div class="card">
+    <div class="card-header">
+        <h4 class="text-center">¿A QUIEN APOYAMOS?</h4>
     </div>
+    <div class="card-body row p-4">
+        <div class="centrar col-12 col-lg-6">
+          <p class="fs-4 fs-lg-3 text-dark mx-auto">
+            -Apoyo a madres solteras/mujer emprendedora</BR>
+            -Becas estudiantes </BR>
+            -Apoyo a adultos mayores</BR>
+            -Apoyo legal + psicologico </BR>
+            -Acceso al fondo de credito 
+          </p>
+        </div>
+        <div class="col-12 col-lg-6">
+          <img src="/imagenes/casa.svg" alt="" class="casa" >
+        </div>
     </div>
   </div>
 </div>
@@ -242,22 +250,27 @@
 <section class="section" id="ubicacion"></section>
         <section class="ubicacion-area " id="ubicacion">
         <div class="container">
-            <div class="card p-4">
-              <div class="row">
-                <div class="col-12 mb-5 mb-lg-0 col-lg-6">
-                    <img src="/imagenes/localizacion2.svg" alt="" class="ubicacion">
-                </div>
-                <div class="centrar col-12 col-lg-6 row">
-                   <div> 
-                     <p class="titulo5">
-                    Estamos muy cerca de ti </p>
-                    <p class="titulo5-1">
-                      Montecito 38 Colonia Napoles Benito Juarez CD Mexico
-                      </p>
-                    </div>
-                        </div>
-
-                </div>
+            <div class="card">
+              <div class="card-header">
+                <h4 class="text-center">¿DONDE ESTAMOS?</h4>
+              </div>
+              <div class="card-body p-4">
+                <div class="row">
+                  <div class="col-12 mb-5 mb-lg-0 col-lg-6">
+                      <img src="/imagenes/localizacion2.svg" alt="" class="ubicacion">
+                  </div>
+                  <div class="centrar col-12 col-lg-6 row">
+                     <div> 
+                       <p class="titulo5">
+                      Estamos muy cerca de ti </p>
+                      <p class="titulo5-1">
+                        Montecito 38 Colonia Napoles Benito Juarez CD Mexico
+                        </p>
+                      </div>
+                          </div>
+  
+                  </div>
+              </div>
             </div>
             </div>
           </section>
@@ -265,109 +278,114 @@
             <section class="section" id="formulario"></section>
     <section class="formulario-area colFor " id="formulario">
         <div class="container">
-            <div class="card p-4">
-              <div class="row">
-                <div class="col-12 mb-5 mb-lg-0 col-lg-6 centrar">
-                    <img src="/imagenes/chat.svg" alt="" class="ubicacion2">
-                </div>
-                <div class="col-12 col-lg-6 centrarVertical">
-                <!-- FORMULARIO -->
-                <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" class="mx-auto w-75">
-                 <!-- Nombre -->
-                  <div class="form-group">
-                    <label  for="name">Nombre del cliente:</label>
-                    <input type="text" class="form-control" id="name" name="name" required>
+            <div class="card">
+              <div class="card-header">
+                <h4 class="text-center">CONTACTO</h4>
+              </div>
+              <div class="card-body p-4">
+                <div class="row">
+                  <div class="col-12 mb-5 mb-lg-0 col-lg-6 centrar">
+                      <img src="/imagenes/chat.svg" alt="" class="ubicacion2">
                   </div>
-                  <!-- correo -->
-                  <div class="form-group">
-                    <label for="email">Correo electronico:</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
-                  </div>
-                  <!-- numero -->
-                  <div class="form-group">
-                    <label for="number">Telefono:</label>
-                    <input type="number" class="form-control" id="number" name="number" required>
-                  </div></br>
-
-                     <!-- monto -->
-                    <div class="colFor form-floating">
-                     <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="floatingSelect">
-                         <option selected>Selecciona el monto</option>
-                         <option value="10,000">10,000</option>
-                         <option value="15,000">15,000</option>
-                         <option value="20,000">20,000</option>
-                         <option value="25,000">25,000</option>
-                         <option value="30,000">30,000</option>
-                         <option value="35,000">35,000</option>
-                         <option value="40,000">40,000</option>
-                         <option value="45,000">45,000</option>
-                         <option value="50,000">50,000</option>
-                         <option value="55,000">55,000</option>
-                         <option value="60,000">60,000</option>
-                         <option value="65,000">65,000</option>
-                         <option value="70,000">70,000</option>
-                         <option value="75,000">75,000</option>
-                         <option value="80,000">80,000</option>
-                         <option value="85,000">85,000</option>
-                         <option value="90,000">90,000</option>
-                         <option value="100,000">100,000</option>
-                     </select>    
-                            <label for="floatingSelect">Monto </label>
+                  <div class="col-12 col-lg-6 centrarVertical">
+                  <!-- FORMULARIO -->
+                  <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" class="mx-auto w-75">
+                   <!-- Nombre -->
+                    <div class="form-group">
+                      <label  for="name">Nombre del cliente:</label>
+                      <input type="text" class="form-control" id="name" name="name" required>
                     </div>
-                  </br>
-                     <!-- estado -->
-                     <div class="colFor form-floating">
-                      <select class="form-select" id="estado" aria-label="Floating label select example" name="estado">
-                          <option selected>Selecciona su Estado</option>
-                          <option value="Aguascalientes">Aguascalientes</option>
-                          <option value="Baja California">Baja California</option>
-                          <option value="Baja California Sur">Baja California Sur</option>
-                          <option value="Campeche">Campeche</option>
-                          <option value="Chiapas">Chiapas</option>
-                          <option value="Chihuahua">Chihuahua</option>
-                          <option value="Coahuila">Coahuila</option>
-                          <option value="Colima">Colima</option>
-                          <option value="Distrito Federal">Distrito Federal</option>
-                          <option value="Durango">Durango</option>
-                          <option value="Estado de Mexico">Estado de Mexico</option>
-                          <option value="Guanajuato">Guanajuato</option>
-                          <option value="Guerrero">Guerrero</option>
-                          <option value="Hidalgo">Hidalgo</option>
-                          <option value="Jalisco">Jalisco</option>
-                          <option value="Michoacan">Michoacan</option>
-                          <option value="Morelos">Morelos</option>
-                          <option value="Nayarit">Nayarit</option>
-                          <option value="Nuevo Leon">Nuevo Leon</option>
-                          <option value="Oaxaca">Oaxaca</option>
-                          <option value="Puebla">Puebla</option>
-                          <option value="Queretaro">Queretaro</option>
-                          <option value="Quintana Roo">Quintana Roo</option>
-                          <option value="San Luis Potosi">San Luis Potosi</option>
-                          <option value="Sinaloa">Sinaloa</option>
-                          <option value="Sonora">Sonora</option>
-                          <option value="Tabasco">Tabasco</option>
-                          <option value="Tamaulipas">Tamaulipas</option>
-                          <option value="Tlaxccala">Tlaxccala</option>
-                          <option value="Veracruz">Veracruz</option>
-                          <option value="Yucatan">Yucatan</option>
-                          <option value="Zacatecas">Zacatecas</option>
-                      </select>    
-                             <label for="estado">Estado </label>
-                     </div>
-                   </br>
-                  <!-- mensaje -->
-                  <div class=" form-group">
-                    <label for="message">Mensaje: </label>
-                    <textarea class="colFor form-control" rows="1" id="message" name="message" required></textarea>
-                  </div>
-                  <div class="form-group">
-                    <div data-netlify-recaptcha="true">
+                    <!-- correo -->
+                    <div class="form-group">
+                      <label for="email">Correo electronico:</label>
+                      <input type="email" class="form-control" id="email" name="email" required>
                     </div>
+                    <!-- numero -->
+                    <div class="form-group">
+                      <label for="number">Telefono:</label>
+                      <input type="number" class="form-control" id="number" name="number" required>
+                    </div></br>
+  
+                       <!-- monto -->
+                      <div class="colFor form-floating">
+                       <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="floatingSelect">
+                           <option selected>Selecciona el monto</option>
+                           <option value="10,000">10,000</option>
+                           <option value="15,000">15,000</option>
+                           <option value="20,000">20,000</option>
+                           <option value="25,000">25,000</option>
+                           <option value="30,000">30,000</option>
+                           <option value="35,000">35,000</option>
+                           <option value="40,000">40,000</option>
+                           <option value="45,000">45,000</option>
+                           <option value="50,000">50,000</option>
+                           <option value="55,000">55,000</option>
+                           <option value="60,000">60,000</option>
+                           <option value="65,000">65,000</option>
+                           <option value="70,000">70,000</option>
+                           <option value="75,000">75,000</option>
+                           <option value="80,000">80,000</option>
+                           <option value="85,000">85,000</option>
+                           <option value="90,000">90,000</option>
+                           <option value="100,000">100,000</option>
+                       </select>    
+                              <label for="floatingSelect">Monto </label>
+                      </div>
+                    </br>
+                       <!-- estado -->
+                       <div class="colFor form-floating">
+                        <select class="form-select" id="estado" aria-label="Floating label select example" name="estado">
+                            <option selected>Selecciona su Estado</option>
+                            <option value="Aguascalientes">Aguascalientes</option>
+                            <option value="Baja California">Baja California</option>
+                            <option value="Baja California Sur">Baja California Sur</option>
+                            <option value="Campeche">Campeche</option>
+                            <option value="Chiapas">Chiapas</option>
+                            <option value="Chihuahua">Chihuahua</option>
+                            <option value="Coahuila">Coahuila</option>
+                            <option value="Colima">Colima</option>
+                            <option value="Distrito Federal">Distrito Federal</option>
+                            <option value="Durango">Durango</option>
+                            <option value="Estado de Mexico">Estado de Mexico</option>
+                            <option value="Guanajuato">Guanajuato</option>
+                            <option value="Guerrero">Guerrero</option>
+                            <option value="Hidalgo">Hidalgo</option>
+                            <option value="Jalisco">Jalisco</option>
+                            <option value="Michoacan">Michoacan</option>
+                            <option value="Morelos">Morelos</option>
+                            <option value="Nayarit">Nayarit</option>
+                            <option value="Nuevo Leon">Nuevo Leon</option>
+                            <option value="Oaxaca">Oaxaca</option>
+                            <option value="Puebla">Puebla</option>
+                            <option value="Queretaro">Queretaro</option>
+                            <option value="Quintana Roo">Quintana Roo</option>
+                            <option value="San Luis Potosi">San Luis Potosi</option>
+                            <option value="Sinaloa">Sinaloa</option>
+                            <option value="Sonora">Sonora</option>
+                            <option value="Tabasco">Tabasco</option>
+                            <option value="Tamaulipas">Tamaulipas</option>
+                            <option value="Tlaxccala">Tlaxccala</option>
+                            <option value="Veracruz">Veracruz</option>
+                            <option value="Yucatan">Yucatan</option>
+                            <option value="Zacatecas">Zacatecas</option>
+                        </select>    
+                               <label for="estado">Estado </label>
+                       </div>
+                     </br>
+                    <!-- mensaje -->
+                    <div class=" form-group">
+                      <label for="message">Mensaje: </label>
+                      <textarea class="colFor form-control" rows="1" id="message" name="message" required></textarea>
+                    </div>
+                    <div class="form-group">
+                      <div data-netlify-recaptcha="true">
+                      </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar datos</button>
+                    <button type="reset" class="btn btn-primary">Borrar datos</button>
+  
+                  </form>
                   </div>
-                  <button type="submit" class="btn btn-primary">Enviar datos</button>
-                  <button type="reset" class="btn btn-primary">Borrar datos</button>
-
-                </form>
                 </div>
               </div>
             </div>
@@ -376,7 +394,11 @@
 <!-- contactos -->
 <section class="section" id="contacto"></section>
 <div class="container ">
-<div class="card p-4">
+<div class="card">
+  <div class="card-header">
+    <h4 class="text-center">SOCIAL</h4>
+  </div>
+<div class="card-body p-4">
   <div class="row">
     <div class="col-12 col-lg-6 centrar">
       <img src="/imagenes/redes.svg" alt="" class="redes">
@@ -400,6 +422,7 @@
      </div>
     </div>
   </div>
+</div>
 </div>
 
 </div>
