--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <a href="#nosotros" class="nav-link active col-barra1" href="#">NOSOTROS</a>
             </li>
             <li class="nav-item">
+              <a href="#servicios" class="nav-link active col-barra2" href="#">SERVICIOS</a>
+            </li>
+            <li class="nav-item">
               <a href="#pronafim" class="nav-link active col-barra2" href="#">PRONAFIM</a>
             </li>
             <li class="nav-item">
@@ -45,12 +48,11 @@
               <a href="#ubicacion" class="nav-link active col-barra4" href="#">UBICACION</a>
             </li>
             <li class="nav-item">
-              <a href="#formulario" class="nav-link active col-barra5" href="#">FORMULARIO</a>
+              <a href="#social" class="nav-link active col-barra6" href="#">SOCIAL</a>
             </li>
             <li class="nav-item">
-              <a href="#contacto" class="nav-link active col-barra6" href="#">CONTACTOS</a>
+              <a href="#contacto" class="nav-link active col-barra5" href="#">CONTACTO</a>
             </li>
-
           </ul>
         </div>
       </div>
@@ -192,11 +194,7 @@
 
 
         <!-- P R E S T A C I O N E S  -->
-<<<<<<< HEAD
-<section class="pronafim-area mt-" id="pronafim">
-=======
 <section class="pronafim-area mb-5" id="pronafim">
->>>>>>> d6c373b21706eb96242eb12a541aed9810f123ca
 <div class="container">
   <div class="row">
   <div class="centrar col-12 col-lg-6">
