--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>CREDICO</title>
+    <script src="./app.js"></script>
   </head>
   <body>
 <section class="sectionHeader"></section>
@@ -30,25 +31,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item mx-auto">
-              <a class="nav-link active col-barra0" aria-current="page" href="#">INICIO</a>
+              <a id="link" class="nav-link active col-barra0" aria-current="page" href="#">INICIO</a>
             </li>
             <li class="nav-item mx-auto">
-              <a href="#nosotros" class="nav-link active col-barra1" href="#">NOSOTROS</a>
+              <a id="link" href="#nosotros" class="nav-link active col-barra1" href="#">NOSOTROS</a>
             </li>
             <li class="nav-item mx-auto">
-              <a href="#pronafim" class="nav-link active col-barra2" href="#">PRONAFIM</a>
+              <a id="link" href="#pronafim" class="nav-link active col-barra2" href="#">PRONAFIM</a>
             </li>
             <li class="nav-item mx-auto">
-              <a href="#apoyo" class="nav-link active col-barra3" href="#">APOYO</a>
+              <a id="link" href="#apoyo" class="nav-link active col-barra3" href="#">APOYO</a>
             </li>
             <li class="nav-item mx-auto">
-              <a href="#ubicacion" class="nav-link active col-barra4" href="#">UBICACION</a>
+              <a id="link" href="#ubicacion" class="nav-link active col-barra4" href="#">UBICACION</a>
             </li>
             <li class="nav-item mx-auto">
-              <a href="#formulario" class="nav-link active col-barra5" href="#">FORMULARIO</a>
+              <a id="link" href="#formulario" class="nav-link active col-barra5" href="#">FORMULARIO</a>
             </li>
             <li class="nav-item mx-auto">
-              <a href="#contacto" class="nav-link active col-barra6" href="#">CONTACTOS</a>
+              <a id="link" href="#contacto" class="nav-link active col-barra6" href="#">CONTACTOS</a>
             </li>
 
           </ul>
