--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />0
 
     <title>CREDICO</title>
     <script src="./app.js"></script>
@@ -37,16 +37,8 @@
             <li class="nav-item mx-auto">
               <a id="link" href="#nosotros" class="nav-link active col-barra1" href="#">NOSOTROS</a>
             </li>
-<<<<<<< HEAD
-            <li class="nav-item">
-              <a href="#servicios" class="nav-link active col-barra2" href="#">SERVICIOS</a>
-            </li>
-            <li class="nav-item">
-              <a href="#pronafim" class="nav-link active col-barra2" href="#">PRONAFIM</a>
-=======
             <li class="nav-item mx-auto">
               <a id="link" href="#pronafim" class="nav-link active col-barra2" href="#">PRONAFIM</a>
->>>>>>> 32acbe3f54d012f7fd6b243d582f52cd105d77e5
             </li>
             <li class="nav-item mx-auto">
               <a id="link" href="#apoyo" class="nav-link active col-barra3" href="#">APOYO</a>
@@ -54,19 +46,11 @@
             <li class="nav-item mx-auto">
               <a id="link" href="#ubicacion" class="nav-link active col-barra4" href="#">UBICACION</a>
             </li>
-<<<<<<< HEAD
-            <li class="nav-item">
-              <a href="#social" class="nav-link active col-barra6" href="#">SOCIAL</a>
-            </li>
-            <li class="nav-item">
-              <a href="#contacto" class="nav-link active col-barra5" href="#">CONTACTO</a>
-=======
             <li class="nav-item mx-auto">
               <a id="link" href="#formulario" class="nav-link active col-barra5" href="#">FORMULARIO</a>
             </li>
             <li class="nav-item mx-auto">
               <a id="link" href="#contacto" class="nav-link active col-barra6" href="#">CONTACTOS</a>
->>>>>>> 32acbe3f54d012f7fd6b243d582f52cd105d77e5
             </li>
           </ul>
         </div>
@@ -126,7 +110,7 @@
 
     <!-- imagen principal -->
     
-    <img class="banner-area img-fluid" src="./imagenes//Cerdito.png" id="home" alt="Responsive image">
+    <img class="banner-area img-fluid" src="./imagenes/Cerdito2.png" id="home" alt="Responsive image">
 
 <!-- NOSOTROS -->
 <section class="section" id="nosotros"></section>
@@ -211,12 +195,8 @@
 
 
         <!-- P R E S T A C I O N E S  -->
-<<<<<<< HEAD
-<section class="pronafim-area mb-5" id="pronafim">
-=======
 <section class="section" id="pronafim"></section>
 <section class="pronafim-area" >
->>>>>>> 32acbe3f54d012f7fd6b243d582f52cd105d77e5
 <div class="container">
   <div class="card">
     <div class="card-header">
@@ -251,11 +231,11 @@
     </div>
     <div class="card-body row p-4">
         <div class="centrar col-12 col-lg-6">
-          <p class="fs-4 fs-lg-3 text-dark mx-auto">
-            -Apoyo a madres solteras/mujer emprendedora</BR>
-            -Becas estudiantes </BR>
-            -Apoyo a adultos mayores</BR>
-            -Apoyo legal + psicologico </BR>
+          <p class="fs-4 fs-lg-3 text-light mx-auto">
+            -Apoyo a madres solteras/mujer emprendedora</BR></BR>
+            -Becas estudiantes </BR></BR>
+            -Apoyo a adultos mayores</BR></BR>
+            -Apoyo legal + psicologico </BR></BR>
             -Acceso al fondo de credito 
           </p>
         </div>
@@ -301,7 +281,7 @@
         <div class="container">
             <div class="card">
               <div class="card-header">
-                <h4 class="text-center">CONTACTO</h4>
+                <h4 class="text-center">FORMULARIO</h4>
               </div>
               <div class="card-body p-4">
                 <div class="row">
