--- a/index.html
+++ b/index.html
@@ -329,6 +329,19 @@
                            <option value="85,000">85,000</option>
                            <option value="90,000">90,000</option>
                            <option value="100,000">100,000</option>
+                           <option value="100,000">200,000</option>
+                           <option value="100,000">300,000</option>
+                           <option value="100,000">400,000</option>
+                           <option value="100,000">500,000</option>
+                           <option value="100,000">600,000</option>
+                           <option value="100,000">700,000</option>
+                           <option value="100,000">800,000</option>
+                           <option value="100,000">900,000</option>
+                           <option value="100,000">1,000,000</option>
+                           <option value="100,000">2,000,000</option>
+                           <option value="100,000">2,500,000</option>
+
+
                        </select>    
                               <label for="floatingSelect">Monto </label>
                       </div>
