--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
        </p>
        <p class="txtFor1">REDES SOCIALES</p>
        <div class="txtFor2">
-        <img src="/imagenes/faceLogo.png" alt="" class="face"> <a class="" href="http://lapagina">CREDICO</a>
+        <img src="/imagenes/faceLogo.png" alt="" class="face"> <a class="" href="https://www.facebook.com/Credico-117034993757930">CREDICO</a>
        </div>
      </div>
     </div>
